# Curves

./: CMakeLists.txt
lib/: Circle.cpp  Circle.h  Curves.h  Ellipse.cpp  Ellipse.h  Figure.h  Helix.cpp  Helix.h  Point.cpp  Point.h
src/: main.cpp
